<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.jocasta.ui.detail.FilmDetailViewModel" />

        <variable
            name="film"
            type="com.example.jocasta.network.model.Film" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.MainActivity">

            <TextView
                android:id="@+id/filmTitle"
                style="@style/DetailTitleBold"
                android:text="@{@string/film_title(film.title)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Luke Skywalker" />

            <TextView
                android:id="@+id/filmEpisodeId"
                style="@style/DetailTextDefault"
                android:text="@{@string/film_episode_id(film.episodeId)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filmTitle"
                tools:text="172" />

            <TextView
                android:id="@+id/filmOpeningCrawl"
                style="@style/DetailTextDefault"
                android:text="@{film.openingCrawl}"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filmEpisodeId"
                tools:text="77" />

            <TextView
                android:id="@+id/filmDirector"
                style="@style/DetailTextDefault"
                android:text="@{@string/film_director(film.director)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filmOpeningCrawl"
                tools:text="blond" />


            <TextView
                android:id="@+id/filmProducer"
                style="@style/DetailTextDefault"
                android:text="@{@string/film_producer(film.producer)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filmDirector"
                tools:text="blue" />

            <TextView
                android:id="@+id/filmReleaseDate"
                style="@style/DetailTextDefault"
                android:text="@{@string/film_release(film.releaseDate)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filmProducer"
                tools:text="19BBY" />

            <TextView
                android:id="@+id/characters"
                style="@style/DetailsListHeaderTitle"
                android:text="@string/detail_characters"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filmReleaseDate" />

            <View
                android:id="@+id/divider1"
                style="@style/DetailPageDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/characters" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/peopleList"
                style="@style/DetailsListStyle"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1"
                app:listPeopleOnFilm="@{film.characters}"
                app:vM="@{viewModel}" />

            <TextView
                android:id="@+id/planets"
                style="@style/DetailsListHeaderTitle"
                android:text="@string/detail_planets"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/peopleList" />

            <View
                android:id="@+id/divider2"
                style="@style/DetailPageDivider"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/planets" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/planetList"
                style="@style/DetailsListStyle"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                app:listPlanetsOnFilm="@{film.planets}"
                app:vM="@{viewModel}" />

            <TextView
                android:id="@+id/starships"
                style="@style/DetailsListHeaderTitle"
                android:text="@string/detail_starships"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/planetList" />

            <View
                android:id="@+id/divider3"
                style="@style/DetailPageDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/starships" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/starshipList"
                style="@style/DetailsListStyle"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                app:listStarshipOnFilm="@{film.starships}"
                app:vM="@{viewModel}" />

            <TextView
                android:id="@+id/vehicles"
                style="@style/DetailsListHeaderTitle"
                android:text="@string/detail_vehicles"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/starshipList" />

            <View
                android:id="@+id/divider4"
                style="@style/DetailPageDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicles" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/vehiclesList"
                style="@style/DetailsListStyle"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider4"
                app:listVehiclesOnFilm="@{film.vehicles}"
                app:vM="@{viewModel}" />

            <TextView
                android:id="@+id/species"
                style="@style/DetailsListHeaderTitle"
                android:text="@string/detail_species"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehiclesList" />

            <View
                android:id="@+id/divider5"
                style="@style/DetailPageDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/species" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/speciesList"
                style="@style/DetailsListStyle"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider5"
                app:listSpeciesOnFilm="@{film.species}"
                app:vM="@{viewModel}" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>