<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="person"
            type="com.example.jocasta.network.model.People" />

        <variable
            name="viewModel"
            type="com.example.jocasta.ui.detail.PeopleDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.MainActivity">

            <TextView
                android:id="@+id/personName"
                android:text="@{person.name}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Luke Skywalker"
                style="@style/DetailTitleBold" />

            <TextView
                android:id="@+id/personHeight"
                android:text="@{@string/people_height(person.height)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personName"
                style="@style/DetailTextDefault"
                tools:text="172" />

            <TextView
                android:id="@+id/personMass"
                android:text="@{@string/people_weight(person.mass)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personHeight"
                style="@style/DetailTextDefault"
                tools:text="77" />

            <TextView
                android:id="@+id/personHairColor"
                android:text="@{@string/people_hair_color(person.hairColor)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personMass"
                style="@style/DetailTextDefault"
                tools:text="blond" />

            <TextView
                android:id="@+id/personSkinColor"
                android:text="@{@string/people_skin_color(person.skinColor)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personHairColor"
                style="@style/DetailTextDefault"
                tools:text="fair" />

            <TextView
                android:id="@+id/personEyeColor"
                android:text="@{@string/people_eye_color(person.eyeColor)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personSkinColor"
                style="@style/DetailTextDefault"
                tools:text="blue" />

            <TextView
                android:id="@+id/personBirthYear"
                android:text="@{@string/people_birth_year(person.birthYear)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personEyeColor"
                style="@style/DetailTextDefault"
                tools:text="19BBY" />

            <TextView
                android:id="@+id/personGender"
                android:text="@{@string/people_gender(person.gender)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personBirthYear"
                style="@style/DetailTextDefault"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/personHomeworld"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:listPlanetOnPeople="@{person.homeworld}"
                app:vM="@{viewModel}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personGender"
                style="@style/DetailsListStyle"/>

            <TextView
                android:id="@+id/films"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personHomeworld"
                android:text="@string/detail_films"
                style="@style/DetailsListHeaderTitle"/>

            <View
                android:id="@+id/divider1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/films"
                style="@style/DetailPageDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1"
                app:listFilmData="@{person.films}"
                app:vM="@{viewModel}"
                style="@style/DetailsListStyle"/>

            <TextView
                android:id="@+id/species"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                android:text="@string/detail_species"
                style="@style/DetailsListHeaderTitle"/>

            <View
                android:id="@+id/divider2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/species"
                style="@style/DetailPageDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/speciesList"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                app:listSpecies="@{person.species}"
                app:vM="@{viewModel}"
                style="@style/DetailsListStyle"/>

            <TextView
                android:id="@+id/vehicles"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speciesList"
                android:text="@string/detail_vehicles"
                style="@style/DetailsListHeaderTitle"/>

            <View
                android:id="@+id/divider3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicles"
                style="@style/DetailPageDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/vehiclesList"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                app:listVehicles="@{person.vehicles}"
                app:vM="@{viewModel}"
                style="@style/DetailsListStyle" />

            <TextView
                android:id="@+id/starships"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehiclesList"
                android:text="@string/detail_starships"
                style="@style/DetailsListHeaderTitle"/>

            <View
                android:id="@+id/divider4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/starships"
                style="@style/DetailPageDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/starshipList"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider4"
                app:listStarShips="@{person.starships}"
                app:vM="@{viewModel}"
                style="@style/DetailsListStyle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>